💄 responsive layout overflow hidden & img size fix

--- a/style.css
+++ b/style.css
@@ -2046,14 +2046,18 @@ i {
       padding: 8px; }
 
 .user-gallery {
-  margin: 0 -15px; }
+  margin: 0 -15px;
+  overflow: hidden; }
   .user-gallery-slider {
     margin-bottom: 4px; }
   .user-gallery .thumbnail-list {
     display: flex;
     justify-content: flex-start;
     align-items: center;
-    padding: 0 2px; }
+    padding: 0 2px;
+    overflow-x: auto; }
+    .user-gallery .thumbnail-list::-webkit-scrollbar {
+      display: none; }
   .user-gallery .thumbnail-item {
     margin-right: 4px; }
     .user-gallery .thumbnail-item:last-child {
@@ -2070,8 +2074,8 @@ i {
       border-radius: 4px; }
       .user-gallery .thumbnail-item button img {
         display: block;
-        width: 100%;
-        height: 100%;
+        width: 64px;
+        height: 64px;
         object-fit: cover; }
   @media screen and (min-width: 768px) {
     .user-gallery {
@@ -2082,7 +2086,10 @@ i {
         padding: 0; }
       .user-gallery .thumbnail-item button {
         width: 75px;
-        height: 75px; } }
+        height: 75px; }
+        .user-gallery .thumbnail-item button img {
+          width: 75px;
+          height: 75px; } }
 
 /*
 * mobile (<768px)
