--- a/styles/components/_user-gallery.scss
+++ b/styles/components/_user-gallery.scss
@@ -1,5 +1,6 @@
 .user-gallery {
   margin: 0 -#{$grid-margin};
+  overflow: hidden;
 
   &-slider {
     margin-bottom: 4px;
@@ -8,6 +9,11 @@
   .thumbnail-list {
     @include flexbox(start);
     padding: 0 2px;
+    overflow-x: auto;
+
+    &::-webkit-scrollbar {
+      display: none;
+    }
   }
 
   .thumbnail-item {
@@ -29,10 +35,11 @@
       overflow: hidden;
       border-radius: 4px;
 
+      //NOTE : border가 들어갔을때 이미지크기가 작아지는 것을 방지하기위해 100% -> 64px로 값 변경
       img {
         display: block;
-        width: 100%;
-        height: 100%;
+        width: 64px;
+        height: 64px;
         object-fit: cover;
       }
     }
@@ -52,6 +59,10 @@
       button {
         width: 75px;
         height: 75px;
+        img {
+          width: 75px;
+          height: 75px;
+        }
       }
     }
   }
